# climrisk.github.io

./: .gitignore  .~lock.CRI_Methodology_Morelli_v0.3.pdf#  .~lock.CRI_Methodology_v0.3_Updated.pdf#  .~lock.Meridian_Resources_CRI_Data.xlsx#  404.html  Acquisition_Outreach_Emails.md  CNAME  CRI_Demo.html  CRI_Methodology_Morelli_v0.3.docx  CRI_Validation_Study_v1.0.docx  ClimRisk_Acquisition_Deck.pptx  ClimRisk_BusinessFinland_Letter.docx  ClimRisk_DPA_v1.0.docx  ClimRisk_Finland_Pitch.pptx  ClimRisk_Investor_Pitch.pptx  ClimRisk_Morelli_Updated_v2.pptx  ClimRisk_Platform.html  ClimRisk_Prospect_List.xlsx  ClimRisk_Rockstart_Pitch.pptx  ClimRisk_StartupVisa_Letter.docx  IQ_Startup_Visa_Email_ClimRisk.docx  Meridian_Chemicals_Assets.csv  Meridian_Resources_CRI_Data.xlsx  PUBLISH_TO_GITHUB.sh  PUSH_TO_GITHUB.sh  README.md  Shrinivash_CV.docx  app.html  dashboard.html  index.html  index.txt  live-planet.html  lu2811tn02z.tmp  lu2961xkhus.tmp
climate_risk_engine/: README.md  demo.py  pyproject.toml  start_api.sh
climate_risk_engine/data/: client_template.xlsx  error_test.xlsx  final_test.xlsx  intake_with_bhp.xlsx  test_commodities.xlsx  test_error1.xlsx  test_error2.xlsx  test_error3.xlsx  test_intake.xlsx  test_missing_id.xlsx  test_template.xlsx  test_warnings.xlsx
climate_risk_engine/data/cache/: test_data.json  (+16 more)
climate_risk_engine/docs/: ARCHITECTURE.md  AUDIT_V1_V2.md  METHODOLOGY.md  POSITIONING.md  ROADMAP.md
climate_risk_engine/frontend/: package-lock.json  package.json
climate_risk_engine/tests/: test_engine_smoke.py  test_scoped_run.py  test_validation.py
(+412 files in other folders)
