[project]
name = "cri"
version = "0.1.0"
description = "Climate Risk Intelligence engine — scenario-driven climate-to-finance translation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
